--- a/linux/distros/gentoo.wiki
+++ b/linux/distros/gentoo.wiki
@@ -1,10 +1,10 @@
-=== Compile Kernel ===
+= Compile Kernel =
 == How to compile a kernel in gentoo? ==
 
-= To get the latest kernel run =
+=== To get the latest kernel run ===
 	`emerge -uDNq --with-bdeps=y sys-kernel/gentoo-sources`
 
-= Change kernel symlink =
+=== Change kernel symlink ===
 	- By default kernel is symlinked to `/usr/src/linux`
 	- To see all the kernels that are currenty installed in the system run
 		- `eselect kernel list`
@@ -15,14 +15,14 @@
 				- After set give the number that you want to use.
 				- If you can't remember the numbers run `eselect kernel list` again to get the numbers.
 
-= Few things before compiling our kernel =
+=== Few things before compiling our kernel ===
 	- Let's first cd into the kernel source directory by `cd /usr/src/linux`
 	- Run `make mrproper` to clean up the last compiled stuff.
 	- If you already have an old config copy it to the _/usr/src/linux_
 		- `cp /home/s2b/.config/kernel/*.config .config`
 			- This where I store my old kernel configs you're location may be different.
 
-= Let's compile our kernel =
+=== Let's compile our kernel ===
 	- I have a _*12 thread*_ cpu so I'm using _*13*_ (_no. of threads + 1_). Use accordingly.
 	- Run `make -j13 menuconfig` to open up the ncurese config menu of kernel.
 		- Chosse options only you need.
@@ -37,12 +37,12 @@
 		- I'm using _lz4_ because it is faster the other compression algorithms.
 			- _lz4_ size is going to be larger in general.
 
-= Now let's prepare our bootloader =
+=== Now let's prepare our bootloader ===
 	- I use grub.
 	- So to update grub to use the newly compiled kernel run.
 	- `grub-mkconfig -o /boot/grub/grub.cfg`
 
-= Time has come =
+=== Time has come ===
 	- If everything went well do a reboot.
 	- If everything works fine after the boot.
 	- Run `cp .config /home/s2b/.config/kernel/$(uname -r).config`
