--- a/index.wiki
+++ b/index.wiki
@@ -5,10 +5,11 @@
 		- [[linux/gaming|Gaming]]
 	- Distro related
 		- [[linux/distros/gentoo|Gentoo]]
-- *Ui/Ux*
-	- [[ui-ux-private/design-doc-private|Design Doc(private)]]
 - *Tutorials*
 	- [[tutorials/installation/installation|Installing Stuff]]
+	- [[tutorials/learn/learn|Learn]]
+- *Ui/Ux*
+	- [[ui-ux-private/design-doc-private|Design Doc(private)]]
 - *Personal*
 	- [[personal/todo/todo|Todo]]
 	- [[personal/diary/diary|My Diary]]
