--- a/tutorials/installation/installation.wiki
+++ b/tutorials/installation/installation.wiki
@@ -1,2 +1,4 @@
 == Table of index ==
 	- [[install-ns2|Network Simulator 2(ns2)]]
+	- Linux/Gentoo
+		- [[/linux/distros/gentoo/installing-stuff/mysql|mysql]]
