--- a/linux/distros/arch/installing-stuff/tensorflow.wiki
+++ b/linux/distros/arch/installing-stuff/tensorflow.wiki
@@ -1,7 +1,4 @@
 = Install Tensorflow =
 
 === Install ===
-	To install Tensorflow run
-	{{{
-	sudo pacman -S python-tensorflow-cuda
-	}}}
+	To install Tensorflow run `sudo pacman -S python-tensorflow-cuda`
